--- a/src/components/Multiselectdropdowndomain/Multiselectdropdowndomain.module.css
+++ b/src/components/Multiselectdropdowndomain/Multiselectdropdowndomain.module.css
@@ -3,5 +3,17 @@
     font-family: 'Poppins',sans-serif;
     font-size: 12px !important;
     text-align: left;
-    max-height: 300px;
+    width:190px;
+}
+
+.domainSelect:focus
+{
+    border:0 !important;
+    box-shadow: 0 !important;
+}
+
+#my_multiselect_field
+{
+    font-family: 'Poppins',sans-serif;
+    font-size: 12px !important;  
 }
