--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,1 +1,35 @@
-.SearchBar {}
+.brandText {
+    margin-bottom: 0;
+    color: #999;
+    font-size: 14px;
+    font-family: 'Noto', sans-serif;
+    user-select: none;
+    text-align: left;
+    padding-top: 4px;
+}
+
+#searchControl {
+    resize: none;
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 40px;
+    border-radius: 2px 0px 0px 2px;
+    width: auto;
+    margin-bottom: 0px !important;
+    height: 38px;
+    padding: 3px 16px 6px 16px;
+    font-size: 16px;
+}
+
+#searchButton {
+    font-size: 16px;
+    line-height: 1.3333333;
+    margin-left: -1px;
+    padding: 8px 30px;
+    border-radius: 0px 2px 2px 0px;
+    float: right;
+    min-width: 170px;
+    font-family: 'Poppins',sans-serif;
+    background-color: #4bcaff;
+    color: white;
+    border: none;
+}
