--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -33,3 +33,26 @@
     color: white;
     border: none;
 }
+
+.Characters
+{
+    color: #999;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    margin-left: 12px;
+}
+
+.CharactersLength
+{
+    color: #999;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: 'Poppins',sans-serif;
+    float:right;
+    padding-top: 3px;
+}
+
+.characterLengthDiv
+{
+    margin-left:-35px;
+}
