--- a/src/components/AskanExpertlogo/AskanExpertlogo.module.css
+++ b/src/components/AskanExpertlogo/AskanExpertlogo.module.css
@@ -3,6 +3,8 @@
     color: #00A5FB;
     font-family: 'Lato', sans-serif;
     font-size: 40px;
+    font-weight: bold;
+    display: block;
 }
 
 #anExpertText
