--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -71,3 +71,91 @@ color: #fd7400;
     position: relative;
     top:-7px;
 }
+
+.dropNotification > i
+{
+    font-size: 20px;
+    cursor: pointer;
+    position: relative
+} 
+
+.dropNotification
+{
+    color:#075491;
+    position: relative;
+    top:-10px;
+}
+
+.userinfo
+{
+    position:relative;
+    top:10px;
+    padding-left: 10px;
+    padding-right:12px;
+}
+
+.userinfo h4
+{
+    margin: 0px 0;
+    margin-bottom: -4px;
+    font-size: 14px;
+    font-weight:300;
+    color:#004358;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    padding: 0px 0px 0px 0px;
+}
+
+.userinfo span
+{
+    padding-left:6px;
+    padding-right:5px;
+    font-size: 14px;
+}
+.userinfo select
+{
+    width: 80px;
+    margin-top: 10px;
+    padding: 2px 4px;
+    height: auto;
+    -webkit-appearance: none;
+    background-position: calc(100% - 4px) 50%;
+    background-repeat: no-repeat;
+    background-size: 13px 19px;
+    border-bottom: none;
+    border-radius: 3px 3px 0px 0px;
+    box-shadow: none;
+    position:relative;
+    top: -12px;
+    left: 5px;
+}
+
+.username > select
+{
+    width: 80px;
+    margin-top: 0px;
+    padding: 2px 4px;
+    height: auto;
+    -webkit-appearance: none;
+    background-position: calc(100% - 4px) 50%;
+    background-repeat: no-repeat;
+    background-size: 13px 19px;
+    border-bottom: none;
+    border-radius: 3px 3px 0px 0px;
+    box-shadow: none;
+    position:relative;
+    top: -2px;
+    left: 5px;
+    margin-right: 20px;
+}
+
+.username > span
+{
+    position: relative;
+    left:-18px;
+    font-size: 14px;
+}
+
+.navigationBar li:nth-child(1):hover, .navigationBar li:nth-child(2):hover, .navigationBar li:nth-child(3):hover
+{
+border-bottom: 2px solid #fd7400;
+}
