--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -8,7 +8,7 @@ a.brandImg img
 .navigationBar
 {
     margin-bottom: 0;
-    margin-left: auto !important;
+    margin-left:auto;
 }
 .navigationBar li
 {
