--- a/src/components/OpentabSeeker/OpentabSeeker.module.css
+++ b/src/components/OpentabSeeker/OpentabSeeker.module.css
@@ -39,3 +39,63 @@
     font-family: 'Poppins',sans-serif;
     display: inline-block;
 }
+
+#bottomRow
+{
+    border-bottom: 1px solid #00A5FB;
+    padding-top: 10px;
+}
+
+/* List of questions css */
+
+.questionsList
+{
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
+    position: relative;
+    margin-bottom: 20px;
+    /* cursor: pointer; */
+    padding: 10px 30px 10px 40px;
+    /* pointer-events: none; */
+    overflow: auto;
+    background: #fff;
+    -webkit-transition: 0s !important;
+    transition: 0s !important;
+    overflow: hidden;
+}
+
+#openQuestionsHeader 
+{
+    font-family: 'Poppins', 'Lato', sans-serif;
+    font-size: 20px;
+    color: #004358;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
+    margin: 0px 0px 10px 0px;
+    font-weight: normal;
+}
+
+.openTabIcons
+{
+    color: rgb(170, 170, 170);
+}
+
+.openTabIcons > i
+{
+    padding:3px;
+    font-size: 14px;
+}
+
+#additionalContext
+{
+    font-family: 'Poppins',sans-serif;
+    font-size: 14px !important;
+    width: 100%;
+    background: #eef1f3;
+    margin: 5px 0px;
+    padding: 10px;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 0;
+}
