--- a/src/components/OpentabSeeker/OpentabSeeker.module.css
+++ b/src/components/OpentabSeeker/OpentabSeeker.module.css
@@ -99,3 +99,51 @@
     padding-bottom: 5px;
     margin-top: 0;
 }
+
+#additionalContext:focus
+{
+outline: none;
+}
+
+.tagDomain 
+{
+   margin-top: 3px !important;
+    text-align: left; 
+}
+
+.tagDomain h3
+{
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+}
+
+.label
+{
+display: inline;
+padding: 0.2em 0.6em 0.3em;
+font-size: 75%;
+font-weight: 700;
+line-height: 1;
+color: #fff;
+text-align: center;
+white-space: nowrap;
+vertical-align: baseline;
+border-radius: 0.25em;
+background-color: #4BCAFF;
+margin:2px;
+}
+
+.tagsinQue h3
+{
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+    float: left;
+    margin-left: 2px;
+    margin-top: 4px;
+}
