--- a/src/components/OpentabSeeker/OpentabSeeker.module.css
+++ b/src/components/OpentabSeeker/OpentabSeeker.module.css
@@ -174,6 +174,7 @@ margin:2px;
     display: inline-block;
     font-family: 'Poppins',sans-serif;
     font-weight: bold;
+    margin-right: 5px;
 }
 
 .tagLabel
