--- a/src/components/Multiselectdropdowndomain/Multiselectdropdowndomain.module.css
+++ b/src/components/Multiselectdropdowndomain/Multiselectdropdowndomain.module.css
@@ -3,7 +3,10 @@
     font-family: 'Poppins',sans-serif;
     font-size: 12px !important;
     text-align: left;
-    width:160px;
+    width:200px;
+    margin-left: auto;
+    padding-left: 5px;
+    display:inline-block;
 }
 
 .domainSelect:focus
