--- a/src/components/TrendingTab/TrendingTab.module.css
+++ b/src/components/TrendingTab/TrendingTab.module.css
@@ -1,1 +1,43 @@
-.TrendingTab {}
+.Wrappersearchbar {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    background-color: #eef0f2;
+}
+
+.midContainer
+{
+    padding-bottom: 0px;
+    padding-top: 101px !important;
+    height: 210px;
+}
+
+.mid-container {
+    margin: 0 auto;
+    padding: 5px
+}
+
+.openQuestions
+{
+    font-size: 20px;
+    color: #075491;
+    font-weight: bold;
+    font-family: 'Poppins',sans-serif;
+    display: inline-block;
+}
+
+#domainTextMultiselect
+{
+    font-family: 'Poppins',sans-serif;
+    font-size: 14px;
+}
+
+#bottomRow
+{
+    border-bottom: 1px solid #00A5FB;
+    padding-top: 10px;
+    padding-bottom: 8px;
+}
