--- a/src/components/TrendingTab/TrendingTab.module.css
+++ b/src/components/TrendingTab/TrendingTab.module.css
@@ -41,3 +41,45 @@
     padding-top: 10px;
     padding-bottom: 8px;
 }
+
+.questionList
+{
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
+    position: relative;
+    margin-bottom: 20px;
+    /* cursor: pointer; */
+    padding: 10px 30px 10px 40px;
+    overflow: auto;
+    background: #fff;
+    -webkit-transition: 0s !important;
+    transition: 0s !important;
+    overflow: hidden;
+}
+
+.sharingButton
+{
+    padding: 3px 6px;
+    font-size: 16px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.sharingButton, .heartButton
+{
+    color: #D3D3D3;
+    font-size: 16px;
+    font-weight: 100;
+}
+
+.headTitle
+{
+    font-family: 'Poppins', 'Lato', sans-serif;
+    font-size: 1.3rem !important;
+    color: #004358 !important;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
+    text-align: left;
+    margin: 0px 0px 10px 0px;
+    font-weight: normal;
+}
