Trending tab css complete

--- a/src/components/TrendingTab/TrendingTab.module.css
+++ b/src/components/TrendingTab/TrendingTab.module.css
@@ -10,12 +10,14 @@
 
 .upvoteButton
 {
-    color: #bdbdbd;    
+    color: #bdbdbd;
+    float: right;    
 }
 
 .upvoteButton > i
 {
     cursor: pointer;
+    padding:3px;
 }
 
 .midContainer
@@ -136,6 +138,7 @@
 {
     width: 40px;
     height:25px;
+    float: right;
 }
 
 .expertInfo
@@ -199,4 +202,89 @@
     border-radius: 0.25em;
     background-color: #4BCAFF;
     margin:2px;
+}
+
+.relatedQuestion
+{
+    color: #949494;
+    font-size: 12px;
+    margin-top: 0px !important;
+}
+
+.relatedCountNumber
+{
+    margin-right: 2px;
+    background-color: green;
+    cursor: pointer;
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.tagsinQue span
+{
+    background-color: #aaa;
+    font-weight: 400;
+    margin:1.2px;
+}
+
+.tagsinQue h3
+{
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+    float: left;
+    margin-left: 2px;
+    margin-top: 4px;
+}
+
+.tagLabel
+{
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.answeredInfo span
+{
+     float: left;
+    color: #949494;
+    font-size: 12px;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    padding:3px;
+    font-weight:normal;
+}
+
+.answerBlock p 
+{
+    font-family: 'Poppins',sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+}
+
+.viewCount, .viewScore
+{
+    border-bottom: 1px dotted #ddd;
+    float:left;
+    color:gray;
+    font-size: 14px;
+    font-weight:500;
+    padding:3px;
+    font-family: 'Poppins',sans-serif;
 }
