--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -14,3 +14,31 @@
     padding-top: 101px !important;
     height: 210px;
 }
+
+.searchOutline {
+    width: 100%;
+    margin-top: 0px;
+    border: 2px solid rgba(255, 165, 0, 0.43);
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
+    position: relative;
+    margin-bottom: 20px;
+    padding: 10px 30px 10px 40px;
+    background: #fff;
+}
+
+.innerDiv {
+    font-size: 16px;
+    text-align: right;
+}
+
+.headTitle {
+    font-family: 'Poppins', 'Lato', sans-serif;
+    font-size: 1.3rem !important;
+    color: #004358 !important;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
+    text-align: left;
+    margin: 0px 0px 10px 0px;
+    font-weight: normal;
+}
