--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -42,3 +42,67 @@
     margin: 0px 0px 10px 0px;
     font-weight: normal;
 }
+
+.sharingButton,
+.heartButton {
+    color: #D3D3D3;
+    font-size: 16px;
+    font-weight: 100;
+}
+
+.additionalCont {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px !important;
+}
+
+#additionalContextspan {
+    background: #eef1f3;
+    margin: 5px 0px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.tagDomain {
+    margin-top: 3px !important;
+    text-align: left;
+}
+
+.tagDomain h3 {
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+}
+
+.label {
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+    background-color: #4BCAFF;
+    margin: 2px;
+}
+
+.tagsinQue span {
+    background-color: #aaa;
+    font-weight: 400;
+    margin: 1.2px;
+}
+
+.tagsinQue h3 {
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+    float: left;
+    margin-left: 2px;
+    margin-top: 4px;
+}
