--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -106,3 +106,146 @@
     margin-left: 2px;
     margin-top: 4px;
 }
+
+.tagLabel {
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.answerDiv {
+    word-break: break-word;
+    border: 1px solid #ececec;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.expertInfo {
+    padding: 10px;
+}
+
+#expertProfilePicture
+{
+    width:40px;
+    height:40px;
+    float: left;
+}
+
+.userInfo {
+    margin-left: 3px;
+    margin-top: 0px;
+}
+
+.userName {
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    float: left;
+}
+
+.paste span {
+    float: right;
+    color: #777;
+}
+
+.reqImg {
+    width: 40px;
+    height: 25px;
+}
+
+.updateIconimg {
+    height: 26px;
+}
+
+#pasteIcon {
+    font-size: 20px !important;
+}
+
+.answeredInfo span {
+    float: left;
+    color: #949494;
+    font-size: 12px;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    padding: 3px;
+    font-weight: normal;
+}
+
+.answerBlock p {
+    font-size: 14px;
+    font-family: 'Poppins',sans-serif;
+    text-align: left;
+}
+
+.viewCount,
+.viewScore {
+    border-bottom: 1px dotted #ddd;
+    float: left;
+    color: gray;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 3px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.ratingTitle {
+    color: #949494;
+    font-size: 12px;
+    margin-left: -20px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.ratingStars {
+    display: inline-block;
+    text-decoration: none;
+    list-style: none;
+    padding-left: 10px;
+}
+
+.ratingStars li {
+    color: #FFE11A;
+    display: inline-block;
+    font-size: 12px;
+    padding: 2px;
+}
+
+.helpfulButton {
+    margin-left: 10px;
+    vertical-align: 2px;
+    padding: 2px 5px 7px 5px;
+    background: #f4f4f4;
+    border-radius: 2px;
+    border: 1px solid #ececec;
+    height: 35px;
+    float: right;
+}
+
+.helpfulButton span {
+    font-weight: bold;
+    color: #4f6384;
+    padding: 5px;
+}
+
+#btnHelpful
+{
+    margin-left: 10px;
+    vertical-align: 2px;
+    padding: 2px 5px 7px 5px;
+    background: #f4f4f4;
+    border-radius: 2px;
+    border: 1px solid #ececec;
+    cursor: pointer
+} 
+ 
+.helpfulButton img {
+    width: 20px;
+    height: 20px;
+    float: right;
+    margin-top: 3px;
+}
