CSS changes for Search Result component

--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -224,11 +224,11 @@
     border: 1px solid #ececec;
     height: 35px;
     float: right;
+    font-family: 'Poppins',sans-serif;
+    
 }
 
-.helpfulButton span {
-    font-weight: bold;
-    color: #4f6384;
+#btnHelpful > span {
     padding: 5px;
 }
 
@@ -236,16 +236,19 @@
 {
     margin-left: 10px;
     vertical-align: 2px;
-    padding: 2px 5px 7px 5px;
+    padding: 2px 5px 5px;
     background: #f4f4f4;
     border-radius: 2px;
     border: 1px solid #ececec;
-    cursor: pointer
+    cursor: pointer;
+    font-weight: bold;
+    color: #4f6384;
 } 
  
 .helpfulButton img {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     float: right;
     margin-top: 3px;
+    margin-left: 2px;
 }
