--- a/src/components/RenderSearchResult/RenderSearchResult.module.css
+++ b/src/components/RenderSearchResult/RenderSearchResult.module.css
@@ -198,7 +198,7 @@
     padding: 2px;
 }
 
-.helpfulButton {
+/* .helpfulButton {
     margin-left: 10px;
     vertical-align: 2px;
     padding: 2px 5px 7px 5px;
@@ -209,7 +209,7 @@
     float: right;
     font-family: 'Poppins',sans-serif;
     
-}
+} */
 
 #btnHelpful > span {
     padding: 5px;
@@ -217,12 +217,10 @@
 
 #btnHelpful
 {
-    margin-left: 10px;
     vertical-align: 2px;
+    font-family: 'Poppins',sans-serif;
     padding: 2px 5px 5px;
-    background: #f4f4f4;
     border-radius: 2px;
-    border: 1px solid #ececec;
     cursor: pointer;
     font-weight: bold;
     color: #4f6384;
@@ -246,6 +244,7 @@
 hr
 {
     margin-top: 2px;
+    margin-bottom: 20px;
 }
 
 #resultBulbIcon
@@ -270,7 +269,6 @@ hr
 .similarSearchResultOutline{
     width: 100%;
     overflow: inherit;
-    margin-top: 80px;
     border: 2px solid rgba(255, 165, 0, 0.43);
     padding: 10px 30px 10px 40px;
     box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
