--- a/src/components/SeekerAnswered/SeekerAnswered.module.css
+++ b/src/components/SeekerAnswered/SeekerAnswered.module.css
@@ -14,3 +14,153 @@
     padding-top: 101px !important;
     height: 210px;
 }
+
+#bottomRow
+{
+    border-bottom: 1px solid #00A5FB;
+    padding-top: 10px;
+    padding-bottom: 8px;
+}
+
+#domainTextMultiselect
+{
+    font-family: 'Poppins',sans-serif;
+    font-size: 14px;
+}
+
+.seekerAnsweredQuestions
+{
+    font-size: 20px;
+    color: #075491;
+    font-weight: bold;
+    font-family: 'Poppins','Lato',sans-serif;
+    display: inline-block;
+}
+
+#expressQuestion
+{
+    color: #fd7400;
+    font-size: 24px;
+    padding-right: 5px;
+}
+
+.questionText
+{
+    border-bottom: none;
+    background: white;
+    font-family: 'Poppins','Lato',sans-serif;
+    font-size: 20px;
+    color: #004358;
+    font-weight: normal;
+}
+
+#additionalContext
+{
+    font-family: 'Poppins',sans-serif;
+    font-size: 14px !important;
+    width: 100%;
+    background: #eef1f3;
+    margin: 5px 0px;
+    padding: 10px;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 0;
+}
+
+.domainText
+{
+    background-color: #4BCAFF;
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 10px !important;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em
+}
+
+.domainHeading
+{
+    color: #949494;
+    font-size: 12px;
+    margin-top: 0px !important;
+    font-family: 'Poppins','Lato',sans-serif;
+}
+
+.askedText
+{
+    color: #949494;
+    font-size: 12px;
+    margin-top: 0px !important;
+    font-family: 'Poppins','Lato',sans-serif;
+    padding-left: 5px;
+} 
+
+.answerTextBorder
+{
+border: 1px solid #ececec;
+border-radius: 5px;
+margin-bottom: 5px;
+padding: 5px;
+font-family: 'Poppins',sans-serif;
+}
+
+.tagLabel
+{
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.tagsinQue span
+{
+    background-color: #aaa;
+    font-weight: 400;
+    margin:1.2px;
+}
+
+.tagsinQue h3
+{
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+    float: left;
+    margin-left: 2px;
+    margin-top: 4px;
+}
+
+.viewAndRateButton
+{
+    font-family: 'Poppins','Lato',sans-serif;
+    float: right;
+    background-color: #00A5FB;
+    border-radius: 3px;
+    margin: 0px 3px;
+    padding-top: 5px;
+    font-size: 14px;
+    line-height: 1.42857143;
+}
+
+#squareCheck
+{
+    padding-right: 5px;
+}
+
+.cardSeperator
+{
+    padding-top:15px;
+}
