--- a/src/components/SeekerAnswered/SeekerAnswered.module.css
+++ b/src/components/SeekerAnswered/SeekerAnswered.module.css
@@ -8,55 +8,48 @@
     background-color: #eef0f2;
 }
 
-.midContainer
-{
+.midContainer {
     padding-bottom: 0px;
     padding-top: 101px !important;
     height: 210px;
 }
 
-#bottomRow
-{
+#bottomRow {
     border-bottom: 1px solid #00A5FB;
     padding-top: 10px;
     padding-bottom: 8px;
 }
 
-#domainTextMultiselect
-{
-    font-family: 'Poppins',sans-serif;
+#domainTextMultiselect {
+    font-family: 'Poppins', sans-serif;
     font-size: 14px;
 }
 
-.seekerAnsweredQuestions
-{
+.seekerAnsweredQuestions {
     font-size: 20px;
     color: #075491;
     font-weight: bold;
-    font-family: 'Poppins','Lato',sans-serif;
+    font-family: 'Poppins', 'Lato', sans-serif;
     display: inline-block;
 }
 
-#expressQuestion
-{
+#expressQuestion {
     color: #fd7400;
     font-size: 24px;
     padding-right: 5px;
 }
 
-.questionText
-{
+.questionText {
     border-bottom: none;
     background: white;
-    font-family: 'Poppins','Lato',sans-serif;
+    font-family: 'Poppins', 'Lato', sans-serif;
     font-size: 20px;
     color: #004358;
     font-weight: normal;
 }
 
-#additionalContext
-{
-    font-family: 'Poppins',sans-serif;
+#additionalContext {
+    font-family: 'Poppins', sans-serif;
     font-size: 14px !important;
     width: 100%;
     background: #eef1f3;
@@ -68,13 +61,12 @@
     margin-top: 0;
 }
 
-.domainText
-{
+.domainText {
     background-color: #4BCAFF;
     display: inline;
     padding: 0.2em 0.6em 0.3em;
     font-size: 10px !important;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 700;
     line-height: 1;
     color: #fff;
@@ -84,34 +76,30 @@
     border-radius: 0.25em
 }
 
-.domainHeading
-{
+.domainHeading {
     color: #949494;
     font-size: 12px;
     margin-top: 0px !important;
-    font-family: 'Poppins','Lato',sans-serif;
+    font-family: 'Poppins', 'Lato', sans-serif;
 }
 
-.askedText
-{
+.askedText {
     color: #949494;
     font-size: 12px;
     margin-top: 0px !important;
-    font-family: 'Poppins','Lato',sans-serif;
+    font-family: 'Poppins', 'Lato', sans-serif;
     padding-left: 5px;
-} 
-
-.answerTextBorder
-{
-border: 1px solid #ececec;
-border-radius: 5px;
-margin-bottom: 5px;
-padding: 5px;
-font-family: 'Poppins',sans-serif;
 }
 
-.tagLabel
-{
+.answerTextBorder {
+    border: 1px solid #ececec;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.tagLabel {
     display: inline;
     padding: 0.2em 0.6em 0.3em;
     font-size: 75%;
@@ -124,15 +112,13 @@ font-family: 'Poppins',sans-serif;
     border-radius: 0.25em;
 }
 
-.tagsinQue span
-{
+.tagsinQue span {
     background-color: #aaa;
     font-weight: 400;
-    margin:1.2px;
+    margin: 1.2px;
 }
 
-.tagsinQue h3
-{
+.tagsinQue h3 {
     font-family: 'Poppins', 'Lato', sans-serif;
     color: #949494;
     font-size: 12px !important;
@@ -143,9 +129,8 @@ font-family: 'Poppins',sans-serif;
     margin-top: 4px;
 }
 
-.viewAndRateButton
-{
-    font-family: 'Poppins','Lato',sans-serif;
+.viewAndRateButton {
+    font-family: 'Poppins', 'Lato', sans-serif;
     float: right;
     background-color: #00A5FB;
     border-radius: 3px;
@@ -155,12 +140,53 @@ font-family: 'Poppins',sans-serif;
     line-height: 1.42857143;
 }
 
-#squareCheck
-{
+#squareCheck {
     padding-right: 5px;
 }
 
-.cardSeperator
+.cardSeperator {
+    padding-top: 15px;
+}
+
+.variheightdiv {
+    top: 0px;
+    left: 0px;
+    word-break: break-word;
+    overflow: hidden;
+    -webkit-transition: 1s linear all;
+    transition: 1s linear all;
+    max-height: 67px;
+}
+
+.fader {
+    margin-top: -77px;
+    left: 0px;
+    width: 100%;
+    height: 77px;
+    opacity: 0.99;
+    background: linear-gradient(to top, rgb(255, 255, 255), rgba(255, 255, 255, 0));
+}
+
+.variheightdivexpanded{
+    top: 0px;
+    left: 0px;
+    max-height: none;
+    word-break: break-word;
+}
+
+.userPic
 {
-    padding-top:15px;
+    width: 40px;
+    height:40px;
+    border-radius: 50%;
+}
+
+.profilePicDiv
+{
+    padding-left: 12px;
+}
+
+.userInfo
+{
+    padding-left: 55px;
 }
