--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -268,7 +268,19 @@
 {
     right: 358px;
     position: absolute;
-    max-height: 30px;
+    z-index: 1;
+}
+
+.tabHeadingCount
+{
+    display: inline-block;
+    background-color: #4BCAFF;
+    color: white;
+    font-family: 'Poppins',sans-serif;
+    font-size: 15px;
+    border-radius: 5px;
+    padding: 0px 5px 0px 5px;
+    margin-left: 8px;
 }
 
 /* Search tabs css end */
