--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -262,6 +262,14 @@
     font-size: 17px;
     font-weight: normal;
     font-weight: 500;
+    border:none;
+}
+
+.tabItems:hover
+{
+    border: none;
+    color:#004358;
+    transition: none;
 }
 
 .multiselectdropdown
