--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -254,7 +254,6 @@
 }
 
 /* Search tabs css */
-
 .tabItems
 {
     font-family: 'Poppins','Lato',sans-serif;
@@ -292,3 +291,26 @@
 }
 
 /* Search tabs css end */
+
+/* AI Search ON/OFF text */
+.AiSearchText
+{
+    font-size: 18px;
+    font-family: 'Poppins','Lato',sans-serif;
+    color:#444444;
+    padding: 5px;
+}
+.searchToggleDiv
+{
+    position: absolute;
+    right:53px;
+}
+
+span.switch-on.btn.btn-primary
+{
+    color: #fff;
+    background-color: #00A5FB !important;
+    border-radius: 3px;
+    border-color: #00A5FB;
+}
+/* AI Search ON/OFF text end */
