--- a/src/components/RenderSearchResult/RenderSearchResult.module.css
+++ b/src/components/RenderSearchResult/RenderSearchResult.module.css
@@ -297,7 +297,6 @@ hr
     color: #00A5FB;
     display: inline-block;
     padding: 3px;
-    text-align: center;
 }
 
 .showMore
@@ -310,4 +309,6 @@ hr
     padding: 3px;
     text-align: center;
     font-size: 14px;
+    cursor: pointer;
+    display: block;
 }
