--- a/src/components/RenderSearchResult/RenderSearchResult.module.css
+++ b/src/components/RenderSearchResult/RenderSearchResult.module.css
@@ -312,3 +312,12 @@ hr
     cursor: pointer;
     display: block;
 }
+
+.fader {
+    margin-top: -77px;
+    left: 0px;
+    width: 100%;
+    height: 77px;
+    opacity: 0.99;
+    background: linear-gradient(to top, rgb(255, 255, 255), rgba(255, 255, 255, 0));
+}
