--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -271,6 +271,11 @@
     transition: none;
 }
 
+.tab-content>.active
+{
+    background-color: white !important;
+}
+
 .multiselectdropdown
 {
     right: 358px;
