--- a/src/components/SharedComponent/SharedComponent.module.css
+++ b/src/components/SharedComponent/SharedComponent.module.css
@@ -29,3 +29,24 @@
 .cardSeperator {
     padding-top: 15px;
 }
+
+.tabHeadingCount
+{
+display: inline-block;
+background-color: #4BCAFF;
+color: white;
+font-family: 'Poppins',sans-serif;
+font-size: 15px;
+border-radius: 5px;
+padding: 0px 5px 0px 5px;
+margin-left: 8px;
+}
+
+.seekerFavoriteQuestions
+{
+    font-size: 20px;
+    color: #075491;
+    font-weight: bold;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    display: inline-block;
+}
