--- a/src/components/SharedWithMe/SharedWithMe.module.css
+++ b/src/components/SharedWithMe/SharedWithMe.module.css
@@ -1,1 +1,52 @@
-.SharedWithMe {}
+.Wrappersearchbar {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    background-color: #eef0f2;
+}
+
+.midContainer {
+    padding-bottom: 0px;
+    padding-top: 101px !important;
+    height: 210px;
+}
+
+#bottomRow {
+    border-bottom: 1px solid #00A5FB;
+    padding-top: 10px;
+    padding-bottom: 8px;
+}
+
+#domainTextMultiselect
+{
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+}
+
+.cardSeperator {
+    padding-top: 15px;
+}
+
+.tabHeadingCount
+{
+display: inline-block;
+background-color: #4BCAFF;
+color: white;
+font-family: 'Poppins',sans-serif;
+font-size: 15px;
+border-radius: 5px;
+padding: 0px 5px 0px 5px;
+margin-left: 8px;
+}
+
+.seekerFavoriteQuestions
+{
+    font-size: 20px;
+    color: #075491;
+    font-weight: bold;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    display: inline-block;
+}
