--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,11 @@
   box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
 }
 
+.tab-content
+{
+  background-color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
