--- a/src/components/SearchResult/SearchResult.module copy.css
+++ b/src/components/SearchResult/SearchResult.module copy.css
@@ -3,6 +3,11 @@ body {
     padding-top: 53px;
 }
 
+.suggestionsSpacer
+{
+    padding-top: 12px;
+}
+
 .searchOutline {
     width: 100%;
     margin-top: 0px;
