--- a/src/components/SimilarResultComponent/SimilarResultComponent.module.css
+++ b/src/components/SimilarResultComponent/SimilarResultComponent.module.css
@@ -1,1 +1,321 @@
-.SimilarResultComponent {}
+.searchOutline {
+    width: 100%;
+    margin-top: 0px;
+    border: 2px solid rgba(255, 165, 0, 0.43);
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
+    position: relative;
+    margin-bottom: 20px;
+    padding: 10px 30px 10px 40px;
+    background: #fff;
+}
+
+.innerDiv {
+    font-size: 16px;
+    text-align: right;
+}
+
+.headTitle {
+    font-family: 'Poppins', 'Lato', sans-serif;
+    font-size: 1.3rem !important;
+    color: #004358 !important;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
+    text-align: left;
+    margin: 0px 0px 10px 0px;
+    font-weight: normal;
+}
+
+.sharingButton,
+.heartButton {
+    color: #D3D3D3;
+    font-size: 16px;
+    font-weight: 100;
+    padding: 3px;
+}
+
+.additionalCont {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px !important;
+}
+
+#additionalContextspan {
+    background: #eef1f3;
+    margin: 5px 0px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.tagDomain {
+    margin-top: 3px !important;
+    text-align: left;
+    display: inline-block;
+}
+
+.tagDomain h3 {
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 8px;
+}
+
+.label {
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+    background-color: #4BCAFF;
+    margin: 2px;
+}
+
+.tagsinQue
+{
+    display: inline-block;
+}
+
+.tagsinQue span {
+    background-color: #aaa;
+    font-weight: 400;
+    margin: 1.2px;
+}
+
+.tagsinQue h3 {
+    font-family: 'Poppins', 'Lato', sans-serif;
+    color: #949494;
+    font-size: 12px !important;
+    font-weight: normal;
+    margin-bottom: 0;
+    float: left;
+    margin-left: 2px;
+    margin-top: 4px;
+}
+
+.tagLabel {
+    display: inline;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.answerDiv {
+    word-break: break-word;
+    border: 1px solid #ececec;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.expertInfo {
+    padding: 10px;
+}
+
+#expertProfilePicture
+{
+    width:40px;
+    height:40px;
+    float: left;
+}
+
+.userInfo {
+    margin-left: 3px;
+    margin-top: 0px;
+}
+
+.userName {
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    float: left;
+}
+
+.paste span {
+    float: right;
+    color: #777;
+}
+
+.reqImg {
+    width: 40px;
+    height: 25px;
+}
+
+.updateIconimg {
+    height: 26px;
+}
+
+#pasteIcon {
+    font-size: 20px !important;
+}
+
+.answeredInfo span {
+    float: left;
+    color: #949494;
+    font-size: 12px;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    padding: 3px;
+    font-weight: normal;
+}
+
+.answerBlock  {
+    font-size: 14px;
+    font-family: 'Poppins',sans-serif;
+    text-align: left;
+    margin-bottom: 12px;
+    margin-top:12px;
+}
+
+.viewCount,
+.viewScore {
+    border-bottom: 1px dotted #ddd;
+    float: left;
+    color: gray;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 3px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.ratingTitle {
+    color: #949494;
+    font-size: 12px;
+    margin-left: 2px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.ratingStars {
+    display: inline-block;
+    text-decoration: none;
+    list-style: none;
+    padding-left: 10px;
+}
+
+.ratingStars li {
+    color: #FFE11A;
+    display: inline-block;
+    font-size: 12px;
+    padding: 2px;
+}
+
+/* .helpfulButton {
+    margin-left: 10px;
+    vertical-align: 2px;
+    padding: 2px 5px 7px 5px;
+    background: #f4f4f4;
+    border-radius: 2px;
+    border: 1px solid #ececec;
+    height: 35px;
+    float: right;
+    font-family: 'Poppins',sans-serif;
+    
+} */
+
+#btnHelpful > span {
+    padding: 5px;
+}
+
+#btnHelpful
+{
+    vertical-align: 2px;
+    font-family: 'Poppins',sans-serif;
+    padding: 2px 5px 5px;
+    border-radius: 2px;
+    cursor: pointer;
+    font-weight: bold;
+    color: #4f6384;
+} 
+ 
+.helpfulButton img {
+    width: 25px;
+    height: 25px;
+    float: right;
+    margin-top: 3px;
+    margin-left: 2px;
+}
+
+#bestResultText, hr
+{
+    color:#555;
+    font-size: 20px;
+    font-family: 'Poppins',sans-serif;
+}
+
+hr
+{
+    margin-top: 2px;
+    margin-bottom: 20px;
+}
+
+#resultBulbIcon
+{
+    font-size: 24px;
+    padding-right: 7px;
+    color: green;
+}
+
+.similarSearchResultOutline{
+    width: 100%;
+    overflow: inherit;
+    border: 2px solid rgba(255, 165, 0, 0.43);
+    padding: 10px 30px 10px 40px;
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
+    background-color: white;
+}
+
+#resultBulbIconSimilar
+{
+    font-size: 26px;
+    color:orange;
+    padding-right: 10px;
+}
+
+.variheightdiv {
+    top: 0px;
+    left: 0px;
+    word-break: break-word;
+    overflow: hidden;
+    -webkit-transition: 1s linear all;
+    transition: 1s linear all;
+    max-height: 67px;
+}
+
+.showMore > i 
+{
+    color: #00A5FB;
+    display: inline-block;
+    padding: 3px;
+}
+
+.showMore
+{
+    font-family: 'Poppins',sans-serif;
+    font-weight: 400;
+    text-transform: lowercase;
+    color: #00A5FB;
+    display: inline-block;
+    padding: 3px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    display: block;
+}
+
+.fader {
+    margin-top: -77px;
+    left: 0px;
+    width: 100%;
+    height: 77px;
+    opacity: 0.99;
+    background: linear-gradient(to top, rgb(255, 255, 255), rgba(255, 255, 255, 0));
+}
+
