--- a/src/components/SimilarResultComponent/SimilarResultComponent.module.css
+++ b/src/components/SimilarResultComponent/SimilarResultComponent.module.css
@@ -270,6 +270,7 @@ hr
     padding: 10px 30px 10px 40px;
     box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
     background-color: white;
+    margin-bottom: 20px;
 }
 
 #resultBulbIconSimilar
