Key terms component added

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@
   border-width: 0px 0 2px !important;
     border-style: solid;
     border-color: #00A5FB;
-    background-color: none;
+    background:none;
 }
 
 .App-link {
