--- a/src/components/RenderKeyTerms/RenderKeyTerms.module.css
+++ b/src/components/RenderKeyTerms/RenderKeyTerms.module.css
@@ -1,1 +1,50 @@
-.RenderKeyTerms {}
+.keyTermsHeadingCount
+{
+display: inline-block;
+background-color: #4BCAFF;
+color: white;
+font-family: 'Poppins',sans-serif;
+font-size: 15px;
+border-radius: 5px;
+padding: 0px 5px 0px 5px;
+margin-left: 8px;
+}
+
+.keyTermsWrapper
+{
+    display: flex;
+    flex-wrap: wrap;
+}  
+
+.Wrappersearchbar {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    background-color: #eef0f2;
+}
+
+.midContainer {
+    padding-bottom: 0px;
+    padding-top: 101px !important;
+    height: 210px;
+}
+
+.seekerKeyTerms
+{
+    font-size: 20px;
+    color: #075491;
+    font-weight: bold;
+    font-family: 'Poppins', 'Lato', sans-serif;
+    display: inline-block;
+}
+
+.keyTermMapDiv
+{
+    width:46%;
+    border:1px solid #a29a9a; 
+    border-radius: 12px; 
+    margin: 10px 10px 10px 25px;
+}
