--- a/src/components/SimilarResultComponent/SimilarResultComponent.module.css
+++ b/src/components/SimilarResultComponent/SimilarResultComponent.module.css
@@ -321,3 +321,21 @@ hr
     background: linear-gradient(to top, rgb(255, 255, 255), rgba(255, 255, 255, 0));
 }
 
+#clickabletag
+{
+    background-color: #f98d8d;
+    font-weight: 400;
+    margin:1.2px;
+    display: inline;
+    font-family: 'Poppins','Lato',sans-serif;
+    padding: 0.2em 0.6em 0.3em;
+    font-size: 75%;
+    font-weight: 400;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+    cursor: pointer;   
+}
