CSS changes for Key term component

--- a/src/components/KeyTermsInnerSection/KeyTermsInnerSection.module.css
+++ b/src/components/KeyTermsInnerSection/KeyTermsInnerSection.module.css
@@ -71,4 +71,12 @@
     font-family: 'Poppins','Lato',sans-serif;
     font-size: 12px;
     display: inline-block;
+    width:70%;
+}
+
+.viewByText
+{
+    font-family: 'Poppins','Lato',sans-serif;
+    font-size: 14px;
+    padding-right: 10px;
 }
